Oppdaterer k9-prosesstasks med breaking changes (#6698)
* Oppdaterer k9-prosesstasks med breaking changes